K8/icecreams-api-servicio.yaml
apiVersion: v1
kind: Service
metadata:
  name: icecreams-api
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 31000
    protocol: TCP
