K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-icecreams
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app.asanchez.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: icecreams-api
            port:
              number: 8080
